--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ MONGODB_URL=mongodb+srv://rawlinz:rAqShQbVc2C6kLt7@cluster0.ogdlrcn.mongodb.net/
 # mongodb+srv://rawlinz:rAqShQbVc2C6kLt7@cluster0.ogdlrcn.mongodb.net/?retryWrites=true&w=majority
 PUBLIC_APP_NAME=HydraGPT
 PUBLIC_APP_ASSETS=chatui
-PUBLIC_APP_COLOR=c
+PUBLIC_APP_COLOR=purple
 
 MODELS='[
   {
